Sat May 27 12:33:19 2000  George Lebl <jirka@5z.com>

	* main.c, manager.c, session-properties.c, gsm-protocol.c, ice.c:
          Fix compile warnings

	* logout.c: Dialog running can return -1 as well.  This is fixes
	  a compile warning and bug #12130

2000-05-18  Mark Crichton <crichton@gimp.org>

        * session-properties.c: Made it use a better default visual.
        This is for the proposed changes in gdk_imlib.

2000-05-14  Karl Eichwalder  <ke@suse.de>

	* session.desktop: Improve de.

2000-05-11  Miguel de Icaza  <miguel@helixcode.com>

	* ice.c (initialize_ice): By default, do not listen to TCP
	connections.

Mon May 08 20:18:32 2000  George Lebl <jirka@5z.com>

	* splash.c (destroy_dialog): run gnome-hint with --startup-session

2000-05-06  Jacob Berkman  <jacob@helixcode.com>

	* default.in: move gmc to priority 40 so that it shows up in the
	splash screen

2000-05-05  Jacob Berkman  <jacob@helixcode.com>

	* logout.c (display_gui): open up (the panel's) help
	(display_gui): add a help button

2000-05-03  Michael Meeks  <michael@helixcode.com>

	* command.c (command): s/strcasecmp/g_strcasecmp/

Tue May 02 23:42:25 2000  George Lebl <jirka@5z.com>

	* ice.c: since the code using IceListenForWellKnownConnections is
	  comment it out, comment out the init_well_known_connections
	  function, this will make it at least for now compile on non
	  Linux or IRIX systems.

2000-05-03  Yukihiro Nakai <nakai@gnome.gr.jp>

	* save-session.desktop: Add Japanese translation.

2000-04-28  John Harper  <john@dcs.warwick.ac.uk>

	* gnome-wm: updated for sawmill -> sawfish name change

2000-04-20  Jacob Berkman  <jacob@helixcode.com>

	* session-properties.c (help): May as well make the help button
	actually do something

2000-01-03  Miguel de Icaza  <miguel@gnu.org>

	* gnome-session.1: remove options that are not actually
	implemented (Thank to Owen for reviewing the documentation)

2000-04-15  Karl EICHWALDER  <ke@suse.de>
